# camera-streamer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  display_frames.py  opencv_rtsp_client.py  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
.github/workflows/: build.yml  package_main.yml  static_analysis.yml
components/battery/: CMakeLists.txt
components/battery/include/: battery.hpp
components/bm8563/include/: bm8563.hpp
components/rtsp/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  fs_init.cpp  fs_init.hpp  idf_component.yml  main.cpp
